--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -26,7 +26,7 @@
     color: #ffffff;
     font-size: 16px;
     font-weight: 600;
-    margin-bottom: 40px;
+    margin-bottom: 0.5rem;
     padding-left: 45px;
 }
 
@@ -36,6 +36,7 @@
     background-color: transparent;
     border-bottom: 2px solid #fff;
     padding: 20px 45px;
+    padding-bottom: 0;
     color: #ffffff;
     font-size: 16px;
     font-weight: 600;
@@ -66,6 +67,7 @@
     background-color: transparent;
     border-bottom: 2px solid #fff;
     padding: 20px 45px;
+    padding-bottom: 4px;
     color: #ffffff;
     font-size: 16px;
     font-weight: 600;
