незначительные изменения в parallax

--- a/src/styles/blocks/information.pcss
+++ b/src/styles/blocks/information.pcss
@@ -30,6 +30,9 @@
     margin-right: 30px;
     outline: none;
     cursor: pointer;
+    &:hover {
+        fill: #ff9a00;
+    }
 }
 
 .slider-button--information {
