--- a/src/pages/about.pug
+++ b/src/pages/about.pug
@@ -1,8 +1,8 @@
-section.about-section#about-section
+section.about#about-section
   .container.container__about
     .about__people
       .about__avatar
-        +image('content/user.jpg', 'avatar')
+        +image('content/user.jpg', 'about_img', 'Аватар создателя сайта')
       .about__information
         - var inf = ['Проживаю:','Возраст:','Родилась:','Саратов','21 год','16 июля 1998']
           ul.about__list
@@ -11,6 +11,6 @@ section.about-section#about-section
 
     .about__desc
       .about__salute Привет, меня зовут
-      h2.user-info__name--about Екатерина Корнилова
+      h2.about__title Екатерина Корнилова
       p.about__work Я занимаюсь разработкой современных сайтов и приложений. Мне нравится делать интересные и современные проекты.
       p.about__study Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
