--- a/src/pages/developer.pug
+++ b/src/pages/developer.pug
@@ -1,9 +1,7 @@
 section.developer#developer
-  .container.container__developer
+  .container.developer__container
     .developer__content
-        .user-info
-            h1.user-info__desc Личный сайт <br>веб разработчика
-            h2.user-info__name Екатерина <br>Корнилова
+      h1.developer__desc Личный сайт <br>веб разработчика
+      h2.developer__name Екатерина <br>Корнилова
     .developer__buttons
-        a.scroll-btn Скролл
-        +icon('scroll', "scroll-icn")
+      include ./scroll
