--- a/src/pages/footer.pug
+++ b/src/pages/footer.pug
@@ -1,11 +1,11 @@
 footer.footer
-  .container.container__footer
+  .container.footer__container
     .footer__username
       .footer__copyright
-        h2.footer__copyright-text &copy 2020
+        div.footer__copyright-text &copy 2020
       .footer__user
-        h3.user__name Екатерина Корнилова
-        .user__description Личный сайт веб-разработчика
+        div.footer__name Екатерина Корнилова
+        .footer__description Личный сайт веб-разработчика
     .footer__common
       .footer__menu
         include ./menu.pug
