--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -1,4 +1,4 @@
-.about-section, .container__about {
+.about, .container__about {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -6,12 +6,17 @@
     justify-content: space-between;
     min-height: 650px;
     z-index: 20;
+    padding-top: 79px;
 }
 
 .about__avatar {
     width: 200px;
     height: 200px;
     margin-bottom: 80px;
+}
+
+.about_img {
+    border-radius: 50%;
 }
 
 .about__people {
@@ -24,6 +29,7 @@
 
 .about__desc {
     width: 60%;
+    padding-right: 26%;
 }
 
 .about__item {
@@ -60,7 +66,7 @@
     font-style: italic;
 }
 
-.user-info__name--about {
+.about__title {
     font-family: "Open Sans";
     font-size: 36px;
     font-weight: 700;
