--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -1,5 +1,5 @@
 .footer,
-.container__footer {
+.footer__container {
     display: flex;
     color: white;
     font-family: "Open Sans";
@@ -38,7 +38,7 @@
     width: 25%;
 }
 
-.user__name {
+.footer__name {
     font-size: 18px;
     font-weight: 700;
     line-height: 30px;
@@ -46,7 +46,7 @@
     margin-bottom: 20px;
 }
 
-.user__description {
+.footer__description {
     opacity: 0.15;
     font-size: 16px;
     font-weight: 400;
