--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -42,7 +42,7 @@
     font-weight: 600;
 }
 
-.user-icon {
+.form__icon {
     width: 25px;
     fill: #fff;
     opacity: .3;
@@ -51,7 +51,7 @@
     bottom: 12%;
 }
 
-.message-icon {
+.form__icon--message {
     width: 25px;
     fill: #fff;
     opacity: .3;
