--- a/src/styles/blocks/information.pcss
+++ b/src/styles/blocks/information.pcss
@@ -1,5 +1,5 @@
-.information-section,
-.container__information {
+.information,
+.information__container {
     display: flex;
     flex-direction: column;
     color: white;
@@ -50,11 +50,11 @@
     fill: #fff;
 }
 
-.reviews__list {
+.information__list {
     display: flex;
 }
 
-.reviews__item {
+.information__item {
     width: 30%;
     display: flex;
     flex-direction: column;
@@ -67,14 +67,14 @@
     }
 }
 
-.reviews__block {
+.information__block {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 250px;
 }
 
-.quote {
+.information__quote {
     position: absolute;
     width: 75px;
     height: 63px;
@@ -83,35 +83,39 @@
     left: -25%; 
 }
 
-.reviews__text {
+.information__text {
     font-size: 15px;
     font-weight: 500;
     line-height: 30px;
     opacity: 0.5;
 }
 
-.reviews__people {
+.information__people {
     display: flex;
 }
 
-.people__inf {
+.information__desk {
     display: flex;
     flex-direction: column;
 }
 
-.people__avatar {
+.information__avatar {
     width: 75px;
     height: 75px;
     margin-right: 20px;
 }
 
-.people__name {
+.information__img {
+    border-radius: 50%;
+}
+
+.information__name {
     font-size: 18px;
     font-weight: 700;
     line-height: 48px;
 }
 
-.people__position {
+.information__position {
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
