--- a/src/styles/blocks/mail.pcss
+++ b/src/styles/blocks/mail.pcss
@@ -1,5 +1,5 @@
-.mail-section,
-.container__mail {
+.mail,
+.mail__container {
     display: flex;
     flex-direction: column;
     color: white;
@@ -8,11 +8,11 @@
     z-index: 40;
 }
 
-.container__mail {
+.mail__container {
     padding-left: 100px;
 }
 
-.mail__taitle {
+.mail__title {
     font-size: 36px;
     font-weight: 700;
     line-height: 48px;
