--- a/src/styles/blocks/mywork.pcss
+++ b/src/styles/blocks/mywork.pcss
@@ -1,19 +1,13 @@
-.mywork-section {
+.mywork {
     background-color: #fff;
 }
 
-.mywork-section,
-.container-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.mywork,
+.mywork__container {
     color: #333c49;
     font-family: "Open Sans";
     min-height: 650px;
-}
-
-.mywork-section {
-    padding-top: 150px;
+    padding-top: 79px;
 }
 
 .mywork__title {
@@ -22,22 +16,12 @@
     font-weight: 700;
     line-height: 48px;
     margin-bottom: 92px;
+    text-align: left;
 }
 
 .mywork__desk {
     display: flex;
     margin-bottom: 206px;
-}
-
-.mywork__slider {
-    width: 60%;
-    z-index: 1;
-}
-
-.slider__navigation {
-    position: absolute;
-    top: 70%;
-    left: 100%;
 }
 
 .mywork__describe {
@@ -57,7 +41,7 @@
     left: -12%;
 }
 
-.mywork__tit {
+.mywork__heading {
     font-size: 30px;
     font-weight: 700;
     line-height: 48px;
@@ -99,7 +83,7 @@
     margin-bottom: 50px;
 }
 
-.site {
+.mywork__site {
     color: #586ed3;
     font-family: "Open Sans";
     font-size: 18px;
