--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -1,5 +1,7 @@
-.mywork__slider {
+.slider {
     position: relative;
+    width: 60%;
+    z-index: 1;
 }
 
 .slider__preview {
@@ -22,6 +24,10 @@
 .slider-miniature__item:hover {
     outline: 3px solid #ff9a00;
     outline-offset: -3px;
+}
+
+.slider-miniature__link {
+    padding: 0;
 }
 
 .slider-button__btn {
@@ -52,4 +58,10 @@
 
 .slider-button__btn {
     outline: none;
+}
+
+.slider__navigation {
+    position: absolute;
+    top: 70%;
+    left: 100%;
 }
