--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 include ./mixins.pug
 
 <!DOCTYPE html>
-html(lang="en")
+html(lang="ru")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -9,15 +9,16 @@ html(lang="en")
     title Portfolio | main page
   body
     .wrapper
-      include ./pages/header
-      .welcome-section
-        include ./pages/parallaxWelcome
-        include ./pages/developer
-        include ./pages/about 
-      include ./pages/help
-      include ./pages/mywork
-      .general-information
-        include ./pages/parallaxGeneral
-        include ./pages/information
-        include ./pages/mail
-      include ./pages/footer
+      .main
+        include ./pages/header
+        .welcome-section
+          include ./pages/parallax-welcome
+          include ./pages/developer
+          include ./pages/about 
+        include ./pages/help
+        include ./pages/mywork
+        .general-section
+          include ./pages/parallax-general
+          include ./pages/information
+          include ./pages/mail
+        include ./pages/footer
