--- a/src/mixins.pug
+++ b/src/mixins.pug
@@ -3,12 +3,15 @@ mixin icon(name, className)
   svg(class=className viewBox=icon.viewBox preserveAspectRatio="none")
     use(xlink:href=icon.url)
 
-mixin image(path, className)
-  img(src=require(`images/${path}`) class=className)
+mixin image(path, className, description, attrRole)
+  if role 
+    img(src=require(`images/${path}`) class=className role=attrRole)
+  else
+    img(src=require(`images/${path}`) class=className alt=description)
 
 mixin skills(item, skillName)
   li(class=item)
     svg(viewBox="0 0 170 170" preserveAspectRatio="none").skill
       circle(cx="85" cy="85" r="65" class='skill__progress skill__progress--' + skillName)
       circle(cx="85" cy="85" r="65").skill__circle
-    h5.skill-text=skillName
+    h5.skills__text=skillName
