--- a/src/styles/blocks/skill-progress.pcss
+++ b/src/styles/blocks/skill-progress.pcss
@@ -1,3 +1,22 @@
+.skill {
+    width: 134px;
+    height: 134px;
+    display: block;
+}
+
+.skill__progress {
+    fill: none;
+    stroke: #ff9a00;
+    stroke-width: 9;
+}
+
+.skill__circle {
+    fill: none;
+    stroke: #e9e9e9;
+    stroke-width: 3;
+    opacity: 0.1;
+}
+
 .skill__progress--HTML5 {
     stroke-dashoffset: -111;
     stroke-dasharray: 262 116;
