--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -1,14 +1,17 @@
-.front-end__list,
-.workflow__list {
+.skills {
+    padding-left: 159px;
+    margin-bottom: 50px;
+}
+
+.skills__list {
     display: flex;
 }
 
-.front-end__item,
-.workflow__item {
+.skills__item {
     position: relative;
 }
 
-.skill-text {
+.skills__text {
     opacity: 0.5;
     color: #ffffff;
     font-family: "Open Sans";
@@ -21,33 +24,13 @@
     text-align: center;
 }
 
-.skill {
-    width: 134px;
-    height: 134px;
-    display: block;
-}
-
-.skill__progress {
-    fill: none;
-    stroke: #ff9a00;
-    stroke-width: 9;
-}
-
-.skill__circle {
-    fill: none;
-    stroke: #e9e9e9;
-    stroke-width: 3;
-    opacity: 0.1;
-}
-
-.front-end__title,
-.workflow__title {
+.skills__title {
     font-size: 24px;
     font-weight: 700;
     line-height: 48px;
     margin-bottom: 24px;
 }
 
-.front-end {
+.skills__front-end {
     margin-bottom: 24px;
 }
