Реализация блока со скиллами на vue

--- a/src/pages/help.pug
+++ b/src/pages/help.pug
@@ -3,4 +3,5 @@ section.help#help-section
     .help__desc
       h3.help__title Чем я могу быть полезна вам
       p.help__study Этот сайт я сделала в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
-    include ./skills
+    #skills-component
+    //-include ./skills
