--- a/src/index.pug
+++ b/src/index.pug
@@ -7,6 +7,8 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title Portfolio | main page
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   body
     .wrapper
       .main
@@ -22,3 +24,8 @@ html(lang="ru")
           include ./pages/information
           include ./pages/mail
         include ./pages/footer
+
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    include ./templates/entry.pug
+    
+    
