--- a/src/styles/blocks/help.pcss
+++ b/src/styles/blocks/help.pcss
@@ -7,6 +7,7 @@
     font-family: "Open Sans";
     min-height: 650px;
     padding-top: 79px;
+    padding-bottom: 70px;
     position: relative;
 }
 
@@ -17,7 +18,7 @@
     width: 30.625rem;
     height: 43.1875rem;
     position: absolute;
-    top: 20%;
+    top: 32.5%;
     left: -3%;
 }
 
