Адаптив под desktop

--- a/src/pages/slider.pug
+++ b/src/pages/slider.pug
@@ -17,7 +17,7 @@
       li.slider-miniature__item
         button.slider-miniature__link(type="button")
           +image("content/car.png", "slider__mini", "Мини-превью сайта - Машины")
-      li.slider-miniature__item
+      li.slider-miniature__item.slider-miniature__item--castle
         button.slider-miniature__link(type="button")
           +image("content/castle.png", "works__mini", "Мини-превью сайта - Замки")
       //-Закомментировала на время, пока не подключу слайдер
