--- a/src/styles/blocks/developer.pcss
+++ b/src/styles/blocks/developer.pcss
@@ -22,6 +22,11 @@
     display: flex;
     position: relative;
     z-index: 11;
+    @include desktop {
+        padding-top: 0px;
+        margin-bottom: 177px;
+        margin-top: -53px;
+    }
 }
 
 .developer__desc {
