--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -86,6 +86,9 @@
     &:hover {
         background-image: linear-gradient(to right, #ff7f00 0%, #ff9d00 100%);
     }
+    @include desktop {
+        margin-bottom: 123px;
+    }
 }
 
 .form__input {
