--- a/src/styles/blocks/skills-vue.pcss
+++ b/src/styles/blocks/skills-vue.pcss
@@ -1,3 +1,9 @@
+.skills__container {
+  @include desktop {
+    padding-left: 10%;
+  }
+}
+
 .skills__list {
   display: flex;
   flex-direction: column;
