--- a/src/templates/components/skills.pug
+++ b/src/templates/components/skills.pug
@@ -1,5 +1,5 @@
 script(type="text/x-template")#skills-list
-    .values__widget-container
+    .skills__container
         ul.skills__list
             li.skills__item(v-for="skill in skills")
                 skills-row(
