--- a/src/pages/information.pug
+++ b/src/pages/information.pug
@@ -1,32 +1,31 @@
-script(type="text/x-template")#information-container
+script(type="text/x-template")
 section.information#information-section
   .container.information__container
     h2.information__title Что обо мне говорят
     .information__slider
       .information__button.slider-button--information
         button(@click="previous()" type="button" aria-label="предыдущий отзыв").slider-button__btn--information
-          +icon("arrow-down", "btn__information btn__prev--information")                  
+          +icon("arrow-down", "btn__information btn__prev--information")             
         button(@click="next()" type="button" aria-label="следующий слайд").slider-button__btn--information
           +icon("arrow-down", "btn__information btn__next--information")
-      ul.information__list
-        
-          li.information__item
-            +icon('quote', 'information__quote')
-            .information__block
-              p.information__text Эта девушка проходила обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
-              .information__people
-                .information__avatar
-                  +image('content/dima.png', 'information__img', 'Аватар основателя LoftSchool - Дмитрия')
-                .information__desk
-                  h4.information__name Ковальчук Дмитрий
-                  .information__position Основатель Loftschool
-          li.information__item
-            +icon('quote', 'information__quote')
-            .information__block
-              p.information__text Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах
-              .information__people
-                .information__avatar 
-                  +image('content/vladimir.png', 'information__img', 'Аватар преподавателя Loftschool - Владимира')
-                .information__desk
-                  h4.information__name Владимир Сабанцев
-                  .information__position Преподаватель
+      ul(ref="flickity" :options="flickityOptions").information__list
+        li.information__item
+          +icon('quote', 'information__quote')
+          .information__block
+            p.information__text Эта девушка проходила обучение веб-разработке не где-то, а в LoftSchool! 4,5 месяца только самых тяжелых испытаний и бессонных ночей!
+            .information__people
+              .information__avatar
+                +image('content/dima.png', 'information__img', 'Аватар основателя LoftSchool - Дмитрия')
+              .information__desk
+                h4.information__name Ковальчук Дмитрий
+                .information__position Основатель Loftschool
+        li.information__item
+          +icon('quote', 'information__quote')
+          .information__block
+            p.information__text Этот код выдержит любые испытания. Только пожалуйста, не загружайте сайт на слишком старых браузерах
+            .information__people
+              .information__avatar 
+                +image('content/vladimir.png', 'information__img', 'Аватар преподавателя Loftschool - Владимира')
+              .information__desk
+                h4.information__name Владимир Сабанцев
+                .information__position Преподаватель    
