--- a/src/styles/blocks/parallax-general.pcss
+++ b/src/styles/blocks/parallax-general.pcss
@@ -6,7 +6,7 @@
 .paralax-general__shadow2 {
     position: absolute;
     width: 100%;
-    height: auto;
+    height: 100%;
     top: 0;
 }
 
@@ -20,19 +20,43 @@
 .paralax-general__sheet1 {
     top: 72%;
     right: 7%;
+    @include desktop {
+        top: 69%;
+        right: 5%;
+        width: 370px;
+        height: 210px; 
+    }
 }
 
 .paralax-general__sheet2 {
     top: 33%;
     right: 20%;
+    @include desktop {
+        top: 36%;
+        right: 22%;
+        width: 132px;
+        height: 140px; 
+    }
 }
 
 .paralax-general__sheet3 {
     top: 51%;
     right: 11%;
+    @include desktop {
+        top: 51%;
+        right: 6%;
+        width: 110px;
+        height: 84px; 
+    }
 }
 
 .paralax-general__sheet4 {
     top: -13%;
     right: -14%;
+    @include desktop {
+       top: -16%;
+       right: -28%;
+       width: 583px;
+       height: 442px; 
+    }
 }
