--- a/src/styles/blocks/information.pcss
+++ b/src/styles/blocks/information.pcss
@@ -39,6 +39,9 @@
     position: absolute;
     top: -28%;
     left: 40%;
+    @include iPad {
+        left: 46%;
+    }
 }
 
 .btn__prev--information {
@@ -81,6 +84,9 @@
     fill: #ffffff;
     opacity: 0.05; 
     left: -25%; 
+    @include iPad {
+        left: -33%;
+    }
 }
 
 .information__text {
