--- a/src/styles/blocks/mywork.pcss
+++ b/src/styles/blocks/mywork.pcss
@@ -55,6 +55,10 @@
         font-size: 336px;
         top: 18%;
     }
+    @include iPad {
+        font-size: 272px;
+        top: 17%;
+    }
 }
 
 .mywork__heading {
