--- a/src/styles/blocks/help.pcss
+++ b/src/styles/blocks/help.pcss
@@ -35,6 +35,9 @@
     display: flex;
     flex-direction: column;
     max-width: 545px;
+    @include iPad {
+        padding-left: 7%;
+    }
 }
 
 .help__title {
