Адаптив для tablets

--- a/src/pages/mywork.pug
+++ b/src/pages/mywork.pug
@@ -12,6 +12,6 @@ section.mywork#mywork-section
             h5.mywork__language CSS
           .mywork__languages
             h5.mywork__language Javascript
-        h4.mywork__heading Сайт школы <br>образования
+        h4.mywork__heading Сайт школы образования
         p.mywork__text Эта девушка проходила обучение веб-разработке не где-то, а в LoftSchool! 2 месяца только самых тяжелых испытаний и бессонных ночей!
         a.mywork__site Посмотреть сайт
