--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -28,6 +28,9 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    @include tablets {
+        width: 35%;
+    }
 }
 
 .about__desc {
@@ -35,6 +38,9 @@
     padding-right: 26%;
     @include desktop {
         padding-right: 10%;
+    }
+    @include tablets {
+        padding-right: 0;
     }
 }
 
