--- a/src/styles/blocks/mail.pcss
+++ b/src/styles/blocks/mail.pcss
@@ -20,4 +20,7 @@
     font-weight: 700;
     line-height: 48px;
     margin-bottom: 32px;
+    @include tablets {
+        text-align: center;
+    }
 }
