--- a/src/styles/blocks/parallax-welcome.pcss
+++ b/src/styles/blocks/parallax-welcome.pcss
@@ -19,6 +19,9 @@
     @include iPad {
         width: 1100px;
     }
+    @include tablets {
+        width: 900px;
+    }
 }
 
 .paralax__image {
@@ -45,6 +48,9 @@
         @include iPad {
             top: 109%;
         }
+        @include tablets {
+            top: 93%;
+        }
     } 
 }
 
@@ -57,6 +63,9 @@
         z-index: 2; 
         @include iPad {
             top: 183%;
+        }
+        @include tablets {
+            top: 162px;
         }
     }
 }
@@ -73,6 +82,9 @@
         }
         @include iPad {
             top: 264%;
+        }
+        @include tablets {
+            top: 237px;
         }
     }
 }
