--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -5,6 +5,9 @@
     @include desktop {
         margin-bottom: 48px;
     }
+    @include tablets {
+        width: 90%;
+    }
 }
 
 .slider__preview {
@@ -19,6 +22,9 @@
     top: 70%; 
     @include desktop {
         top: 51%;
+    }
+    @include tablets {
+        top: 56%;
     }
 }
 
@@ -78,5 +84,8 @@
     left: 100%;
     @include desktop {
         top: 51%;
+    }
+    @include tablets {
+        top: 57%;
     }
 }
