--- a/src/styles/blocks/mywork.pcss
+++ b/src/styles/blocks/mywork.pcss
@@ -11,6 +11,9 @@
     @include desktop {
         padding-top: 64px;
     }
+    @include tablets {
+        padding-top: 48px;
+    }
 }
 
 .mywork__title {
@@ -31,6 +34,9 @@
     @include desktop {
         margin-bottom: 144px;
     }
+    @include tablets {
+        flex-direction: column;
+    }
 }
 
 .mywork__describe {
@@ -39,6 +45,14 @@
     padding-left: 12.5%;
     @include desktop {
         padding-left: 11%;
+    }
+    @include tablets {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding-left: 0;
     }
 }
 
@@ -59,6 +73,11 @@
         font-size: 272px;
         top: 17%;
     }
+    @include tablets {
+        left: 82%;
+        top: -142%;
+        font-size: 336px;
+    }
 }
 
 .mywork__heading {
@@ -66,11 +85,18 @@
     font-weight: 700;
     line-height: 48px;
     margin-bottom: 44px;
+    @include tablets {
+        margin-bottom: 16px;
+        padding: 0;
+    }
 }
 
 .mywork__tag {
     display: flex;
     margin-bottom: 48px;
+    @include tablets {
+        margin-bottom: 16px;
+    }
 }
 
 .mywork__language {
@@ -101,6 +127,10 @@
     font-weight: 700;
     line-height: 30px;
     margin-bottom: 50px;
+    @include tablets {
+        margin-bottom: 16px;
+        padding: 0 17%;
+    }
 }
 
 .mywork__site {
