--- a/src/styles/blocks/skills-vue.pcss
+++ b/src/styles/blocks/skills-vue.pcss
@@ -5,6 +5,10 @@
   @include iPad {
     padding-left: 25%;
   }
+  @include tablets {
+    padding-left: 0;
+    text-align: center;
+  }
 }
 
 .skills__list {
