Исправление ошибок в адаптиве для tablets

--- a/src/styles/blocks/developer.pcss
+++ b/src/styles/blocks/developer.pcss
@@ -32,6 +32,7 @@
     }
     @include tablets {
         margin-bottom: 352px;
+        text-align: center;
     }
 }
 
@@ -52,6 +53,9 @@
     }
     @include tablets {
         font-size: 16px;
+        text-align: center;
+        top: -43%;
+        left: 28%;
     }
 }
 
