--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -79,7 +79,7 @@
     margin-bottom: 50px;
 }
 
-.footer__desk {
+.footer__desc {
     @include tablets {
         flex-direction: column;
     }
@@ -152,4 +152,8 @@
     font-size: 16px;
     font-style: italic;
     line-height: 30px;
+}
+
+.socials__footer {
+    width: 38%;
 }
