--- a/src/styles/blocks/parallax-welcome.pcss
+++ b/src/styles/blocks/parallax-welcome.pcss
@@ -65,7 +65,7 @@
             top: 183%;
         }
         @include tablets {
-            top: 162px;
+            top: 162%;
         }
     }
 }
@@ -84,7 +84,7 @@
             top: 264%;
         }
         @include tablets {
-            top: 237px;
+            top: 237%;
         }
     }
 }
